-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.577 2009-07-10 22:23:37 remko Exp $
-----------------------------------------------------------------------------------------

-----------------------------------------------------------------------------------------
2009-07-15
	* GMT 4.5.0 finalized and released
-----------------------------------------------------------------------------------------

2009-07-10	remko
	* gmt_init.c:		GMT_font_lookup now understands font numbers too.
	* psscale.c:		Added -Aa and -Al options to move only the annotations or label to the
				other side of the color bar. When using -A on horizontal bar, the last
				tick mark would not appear. Require -Ac to keep the column plotting
				of vertical labels.
	* pslegend.c:		Make font height dependent on actual font used.

2009-07-09	pwessel
	* gmt_mgg_header2.c:	Can now handle float grids, and properly handles byte-order swapping in input.
	* segyprogs/pssegy.c:	Casting as long forced 8 rather than 4-byte offsets. Thanx to Adrian Benson.
	* segyprogs/pssegyz.c:	Casting as long forced 8 rather than 4-byte offsets.
	* segyprogs/segy2grd.c:	Casting as long forced 8 rather than 4-byte offsets.

2009-07-09	remko
	* psclip.c:		Produce warning when using -B in combination with -N or -T.
				Better reuse of code.
	* psclip.txt:		Explained even-odd rule.
	* psxy.{c,txt}:		Added -T option. Equivalent to adding /dev/null (or NUL on Windows).
	* pslegend.c, anim01.sh:	Make use of new psxy -T option.

2009-07-08	pwessel
	* sph/sphtriangulate.c:	Must turn -mo on when -T is selected.

2009-07-08	remko
	* psscale.c:		When using -A on vertical scale bar, annotation was left not right aligned.

2009-07-07	pwessel
	* gmt_plot.c:		The polar cap on gridlines needed to be reversed for r-theta (polar) maps

2009-07-07	remko
	* gmt_support.c (GMT_RI_prepare):	Fixed bug: when x_inc in km, m, etc,
				value was ignored (always 1).

2009-07-05	pwessel