@@ -1,11 +1,14 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.577 2009-07-10 22:23:37 remko Exp $
+	$Id: ChangeLog,v 1.578 2009-07-11 00:00:14 guru Exp $
 -----------------------------------------------------------------------------------------
 
 -----------------------------------------------------------------------------------------
 2009-07-15
 	* GMT 4.5.0 finalized and released
 -----------------------------------------------------------------------------------------
+
+2009-07-10	pwessel
+	* gmt_suppl.html:	Add all the new supplement programs to the HTML doc page.
 
 2009-07-10	remko
 	* gmt_init.c:		GMT_font_lookup now understands font numbers too.
